--- a/src/pages/User/Game/index.css
+++ b/src/pages/User/Game/index.css
@@ -23,13 +23,13 @@ ol, ul {
   float: left;
   font-size: 24px;
   font-weight: bold;
-  line-height: 34px;
-  height: 34px;
+  line-height: 30px;
+  height: 30px;
   margin-right: -1px;
-  margin-top: -1px;
-  padding: 0;
+  margin-top: -2px;
+  margin-bottom: 1px;
   text-align: center;
-  width: 34px;
+  width: 30px;
 }
 
 .square:focus {
